@@ -7,7 +7,7 @@ license: gpl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
-name: check_bandwidth
+name: check_procs_multi
 no_index: 
   directory: 
     - inc
@@ -18,8 +18,5 @@ requires:
   Getopt::Long: 0
   Nagios::Plugin: 0
   Nagios::Plugin::Threshold: 0
-  Net::DNS::Resolver: 0
-  Pod::Usage: 0
-  perl: 5.8.0
   version: 0
-version: 0.9.2
+version: 0.9.4
