@@ -19,7 +19,6 @@ requires 'English'                   => 0;
 requires 'Getopt::Long'              => 0;
 requires 'Nagios::Plugin'            => 0;
 requires 'Nagios::Plugin::Threshold' => 0;
-requires 'Pod::Usage'                => 0;
 requires 'version'                   => 0;
 
 install_script  'check_procs_multi';
