@@ -1,4 +1,4 @@
-%define version 0.9.3
+%define version 0.9.4
 %define release 0
 %define name    check_procs_multi
 %define _prefix /usr/lib/nagios/plugins/contrib
@@ -40,6 +40,9 @@ rm -rf $RPM_BUILD_ROOT
 %attr(0755, root, root) /usr/share/man/man3/%{name}.3pm.gz
 
 %changelog
+* Fri Mar 21 2008 Matteo Corti <matteo.corti@id.ethz.ch> - 0.9.4-0
+- fixed the missing usage message
+
 * Thu Mar 20 2008 Matteo Corti <matteo.corti@id.ethz.ch> - 0.9.3-0
 - ePN compatibility
 
