@@ -1,3 +1,7 @@
+2008-03-21  Matteo Corti  <matteo.corti@id.ethz.ch>
+
+	* check_procs_multi: POD in a separate file for ePN compatibility
+
 2008-02-13  Matteo Corti  <matteo.corti@id.ethz.ch>
 
 	* check_procs_multi: the usage text now specifies that more
